[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "trader"
version = "2025.01.12"
dependencies = [
]
requires-python = ">= 3.8"
authors = [
    {name = "Aditya", email = "code.aditya@gmail.com"},
]
description = "Download and process data for Stock Markets"
readme = "README.rst"
keywords = ["nse", "stocks", "bhavcopy"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Repository = "https://github.com/codeaditya/trader"

[tool.setuptools]
py-modules = ["trader"]

# ... other project metadata fields as listed in:
#     https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
